feat: task management application with React and TypeScript
The application provides task management features with a modern tech stack:

- Authentication with protected routes

- Task CRUD operations using React Query

- Material-UI and shadcn components with dark mode

- TypeScript for enhanced type safety

- ESLint and Prettier for code quality

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task Manager - Organize Your Tasks Efficiently</title>
     <meta name="description" content="A modern task management web application built with React and Material UI. Manage your tasks with ease, track progress, and boost productivity." />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="TaskManager" />
 
     <meta property="og:title" content="Task Manager - Organize Your Tasks" />
     <meta property="og:description" content="Modern task management app with authentication, dark mode, and role-based access control" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/task-manager-og.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@taskmanager" />
+    <meta name="twitter:image" content="/task-manager-og.png" />
   </head>
 
   <body>
