feat: add favicon support
- Add favicon.png reference in HTML head

- Add apple-touch-icon for iOS devices

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task Manager - Organize Your Tasks Efficiently</title>
     <meta name="description" content="A modern task management web application built with React and Material UI. Manage your tasks with ease, track progress, and boost productivity." />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
     <meta name="author" content="TaskManager" />
 
     <meta property="og:title" content="Task Manager - Organize Your Tasks" />
